2017-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c term/canvas.trm term/emf.trm term/tkcanvas.trm
	term/sixel.c src/time.c src/wxterminal/gp_cairo.c docs/doc2tex.c:
	Do not use C++ style comments in C source files.

2017-07-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (magnitude) src/standard.c(f_abs f_ceil f_floor):
	src/internal.c (f_power):  Use idiom fabs((double)i) rather than
	(double)(abs(i)) so that i can be either a short or long integer.
	Preparation for 64-bit int support.

2017-07-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wd2d.cpp:  Create an IDXGISurface instead of IDXGISurface1.
	Bug #1941

	* src/mingw/Makefile (clean):  Remove prntvpt.lib|def as the lib has
	has to be recreated for 32/64 bit builds.
	Bug #1942

2017-07-11 Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/win/wgraph.c (GraphGetBitmap):  Correct mixed up order of
	parameters for ReleaseDC().

2017-07-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp (SaveAsBitmap):  Make sure that GDI+ is
	initialized.  Bug fix.

	* src/win/wgraph.c (TryCreateFont):  Silence font substitution
	warnings in GDI backend again.  This is consistent with other backends
	and less annoying.

	* src/win/wgraph.c src/win/wcommon.h src/win/wgdiplus.cpp 
	(SaveAsBitmap):  Get a bitmap copy of the screen output with the help
	of a new routine GraphGetBitmap() extracted from CopyClip().  Fix
	for the D2d 1.1 case.

2017-07-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c:  Fix a few more oversights concerning the
	allocation of a separate subwindow for the graph (2017-06-24).

2017-07-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term): Revise "test" command output.
	- simplify rotated text and arrow section
	- fix bug in "dumb" centering of polygon title
	- compare true textbox area with generic estimated text dimensions.

2017-07-07  Bastian Maerkisch  <bmaerkisch@web.de>
